--- a/Pai/Content/Site.css
+++ b/Pai/Content/Site.css
@@ -58,3 +58,14 @@ fieldset {
   min-width: 0;
 }
 /*# sourceMappingURL=Site.css.map */
+
+
+.chart rect {
+  fill: steelblue;
+}
+
+.chart text {
+  fill: white;
+  font: 10px sans-serif;
+  text-anchor: middle;
+}
