--- a/Pai/Views/Home/Project.cshtml
+++ b/Pai/Views/Home/Project.cshtml
@@ -54,8 +54,8 @@
                 </tbody>
             </table>
         </div>
-        <div class="chart">
+        <svg class="chart">
 
-        </div>
+        </svg>
     </div>
 </div>
